2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-prefs.glade: Better messages when 
    either SSH agent or GPG agent not in order.
    
2006-08-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/tests/Makefile.am: Link properly so libcryptui
    dependencies get pulled in.
    * libcryptui/cryptui-key-store.c: Allow use of empty string 
    for 'no signer'. 
    * libcryptui/cryptui-key-list.c: Added translatable strings.
    
2006-08-13  Nate Nielsen  <nielsen@memberwebs.com>

    * Merged changes from seahorse-0-8 branch.
    
2006-08-03  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-service-crypto.c:
    * daemon/seahorse-service-keyset.c:
    * daemon/seahorse-service.c:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-default-key-control.h:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-key-source.c:
    * libseahorse/seahorse-key-source.h:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-keyset.c:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-notification.c:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-unknown-key.c:
    * libseahorse/seahorse-unknown-source.c:
    * libseahorse/seahorse-unknown-source.h:
    * libseahorse/seahorse-util.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-widget.c: