@@ -1,5 +1,10 @@
 2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * src/seahorse-keyserver-sync.c: Small fix when somehow no keys
+    are found to sync. Displays '0 keys selected for syncing'
+    
+2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-prefs-cache.c:
     * libseahorse/seahorse-prefs.glade: Better messages when 
     either SSH agent or GPG agent not in order.
